Post and GetAll

--- a/server/CafePetProject/Cafe.Web/appsettings.Development.json
+++ b/server/CafePetProject/Cafe.Web/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "WebApiDatabase": "Host=localhost; Database=CafeDb; Username=postgres; Password=857564"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
