Add all basic CRUD for dish

--- a/server/CafePetProject/Cafe.Aplication/Cafe.Aplication.csproj
+++ b/server/CafePetProject/Cafe.Aplication/Cafe.Aplication.csproj
@@ -12,4 +12,8 @@
       <ProjectReference Include="..\Cafe.Infrustructure\Cafe.Infrustructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="DTOs\DishDTOs\Responce\" />
+    </ItemGroup>
+
 </Project>
