--- a/server/CafePetProject/Cafe.Application/Cafe.Application.csproj
+++ b/server/CafePetProject/Cafe.Application/Cafe.Application.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>ClassLibrary1</RootNamespace>
+        <RootNamespace>Cafe.Application</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <Folder Include="DTOs\DishDTOs\Responce\" />
+      <Folder Include="DTOs\OrderDTOs\Responce\" />
     </ItemGroup>
 
 </Project>
