Revert "Add Orders in Db"
This reverts commit ab921f991f14c412a68851fd4063a163d9b189b5.

--- a/server/CafePetProject/Cafe.Web/Cafe.Web.csproj
+++ b/server/CafePetProject/Cafe.Web/Cafe.Web.csproj
@@ -18,7 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Cafe.Application\Cafe.Application.csproj" />
+      <ProjectReference Include="..\Cafe.Aplication\Cafe.Aplication.csproj" />
       <ProjectReference Include="..\Cafe.Domain\Cafe.Domain.csproj" />
       <ProjectReference Include="..\Cafe.Infrustructure\Cafe.Infrustructure.csproj" />
     </ItemGroup>
