--- a/server/CafePetProject/Cafe.Aplication/Cafe.Aplication.csproj
+++ b/server/CafePetProject/Cafe.Aplication/Cafe.Aplication.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>Cafe.Application</RootNamespace>
+        <RootNamespace>ClassLibrary1</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -14,7 +14,6 @@
 
     <ItemGroup>
       <Folder Include="DTOs\DishDTOs\Responce\" />
-      <Folder Include="DTOs\OrderDTOs\Responce\" />
     </ItemGroup>
 
 </Project>
