Add Server Authorization and Authentification
Add few enpoints Login, RegisterUser, Logout and GetNewAccessToken. Also was add Token Middleware and Authorization attribute. And change Db on MsSql

--- a/server/CafePetProject/Cafe.Web/appsettings.json
+++ b/server/CafePetProject/Cafe.Web/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "WebApiDatabase": "Data Source=(localdb)\\MSSQLLocalDB;Database=CafeDb;Integrated Security=true;TrustServerCertificate=true;"
+  },
+  "Jwt": {
+    "Key": "DhftOS5uphK3SawssvmCJQrexST1RsyjZBjXWRg",
+    "Issuer": "CafeServer",
+    "Audience": "CafeServer"
+  },
   "AllowedHosts": "*"
 }
