--- a/server/CafePetProject/Cafe.Application/Cafe.Application.csproj
+++ b/server/CafePetProject/Cafe.Application/Cafe.Application.csproj
@@ -17,4 +17,8 @@
       <Folder Include="DTOs\OrderDTOs\Responce\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.15" />
+    </ItemGroup>
+
 </Project>
