--- a/server/CafePetProject/Cafe.Application/Cafe.Application.csproj
+++ b/server/CafePetProject/Cafe.Application/Cafe.Application.csproj
@@ -18,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.15" />
     </ItemGroup>
 
